--- a/Updatesite/index.html
+++ b/Updatesite/index.html
@@ -2,6 +2,16 @@
 <head>
 <link rel="stylesheet" type="text/css"            href="/blog/style.css" media="all">
 <title>Modell(-bau-)basierte Eisenbahnsteuerung - Update Site</title>
+<style>
+center
+{
+	border-color: #222;
+	border-style: solid;
+	border-width: 1px;
+	background-color: #eee;
+	width: auto;
+}
+</style>
 </head>
 
 <body background="http://mrw.sourceforge.net/blog/mrw_bg.jpg">
@@ -19,8 +29,6 @@ pageTracker._trackPageview();
 <!-- ------------- Google Analytics ------------- -->
 
 <center>
-<table>
-<tr><td width="480" align="center">
 <h1>Modell(-bau-)basierte Eisenbahnsteuerung</h1>
 <h2>Update Site</h2>
 
@@ -29,9 +37,6 @@ Auf dieser Seite sind die Updates f&uuml;r Eclipse erh&auml;ltlich.
 F&uuml;gen Sie dem Eclipse diese Update Site:<br><br>mrw.sourceforge.net/updates/<br><br>
 hinzu und w&auml;hlen Sie das entsprechende Paket aus.
 </p>
-</td>
-</tr>
-</tr>
 </center>
 
 </body>
