--- a/Updatesite/index.html
+++ b/Updatesite/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css"            href="/blog/style.css" media="all">
 <title>Modell(-bau-)basierte Eisenbahnsteuerung - Update Site</title>
@@ -10,13 +11,15 @@ center
 	border-width: 1px;
 	background-color: #eee;
 	width: auto;
+	margin: 1em;
+	padding: 1em;
 }
 </style>
 </head>
 
 <body background="http://mrw.sourceforge.net/blog/mrw_bg.jpg">
 
-<!-- ------------- Google Analytics ------------- -->
+<!-- ============= Google Analytics ============= -->
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -26,7 +29,7 @@ try {
 var pageTracker = _gat._getTracker("UA-15597220-3");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-<!-- ------------- Google Analytics ------------- -->
+<!-- ============= Google Analytics ============= -->
 
 <center>
 <h1>Modell(-bau-)basierte Eisenbahnsteuerung</h1>
@@ -39,5 +42,17 @@ hinzu und w&auml;hlen Sie das entsprechende Paket aus.
 </p>
 </center>
 
+<center>
+	<h3>Anzeige:</h3>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- mrw-base -->
+	<ins class="adsbygoogle"
+	     style="display:inline-block;width:728px;height:90px"
+	     data-ad-client="ca-pub-5624873446529143"
+	     data-ad-slot="3412407518"></ins>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</center>
 </body>
 </html>
