* HTML der Update Site korrigiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@223 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/Updatesite/index.html
+++ b/Updatesite/index.html
@@ -17,7 +17,7 @@ center
 </style>
 </head>
 
-<body background="http://mrw.sourceforge.net/blog/mrw_bg.jpg">
+<body background="http://eisenbahnsteuerung.org/blog/mrw_bg.jpg">
 
 <!-- ============= Google Analytics ============= -->
 <script type="text/javascript">
@@ -37,7 +37,7 @@ pageTracker._trackPageview();
 
 <p>
 Auf dieser Seite sind die Updates f&uuml;r Eclipse erh&auml;ltlich.
-F&uuml;gen Sie dem Eclipse diese Update Site:<br><br>mrw.sourceforge.net/updates/<br><br>
+F&uuml;gen Sie dem Eclipse diese Update Site:<br><br>eisenbahnsteuerung.org/updates/<br><br>
 hinzu und w&auml;hlen Sie das entsprechende Paket aus.
 </p>
 </center>
